[INFER] Don't store a integer result in a double slot in JSOP_NEG, bug 643913.